Fix docs readability in light mode (#2134)

--- a/apps/docs/src/styles/_color.scss
+++ b/apps/docs/src/styles/_color.scss
@@ -42,4 +42,5 @@ html[data-theme='light'] body {
   --blue-link: #005fbe;
   --cta-surface-neutral-primary: #dedede;
   --hover-color: #08ae78;
+  --secondary-hover-color: #08ae78;
 }
